# INDMoneyPlus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.dev.md  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.dev.yml.backup  docker-compose.dev.yml.minimal  docker-compose.override.yml.example  package-lock.json  package.json  prompt.txt
.github/: CODING_STANDARDS.md  COMMIT_CONVENTION.md  ENFORCEMENT_SUMMARY.md  RULES_ENFORCEMENT.md  pull_request_template.md
.github/workflows/: agent-orchestrator-ci.yml  aggregator-service-ci.yml  auth-service-ci.yml  cd.yml  ci.yml  code-quality.yml  dev-ci.yml  marketdata-service-ci.yml  notification-service-ci.yml  order-orchestrator-ci.yml
api-specs/: README.md
deployment/helm/portfolio-superapp/: Chart.yaml  values.yaml
docs/: ARCHITECTURE.md  RUNBOOK.md
infra/k8s/: api-gateway-deployment.yaml
infra/terraform/: main.tf  variables.tf
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  portfolio-services.json
scripts/: bootstrap-dev.sh  check_docstrings.py  check_function_size.py  check_type_annotations.py  ci_local.sh  deploy.sh  docker-wait-for.sh  flush_redis.py  flush_redis.sh  run-tests.sh  seed.sh  watch-all.sh  watch.sh
seed/: 00_databases.sql  01_users.sql  02_instruments.sql
services/admin-service/: Dockerfile  pyproject.toml
services/admin-service/app/: __init__.py  main.py
services/agent-orchestrator/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
services/agent-orchestrator/alembic/: env.py
services/agent-orchestrator/app/: __init__.py  main.py
services/aggregator-service/: Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
services/analytics-service/: Dockerfile  pyproject.toml
services/analytics-service/app/: main.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/tests/: __init__.py
services/auth-service/: ACCEPTANCE_CRITERIA.md  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
services/marketdata-service/: Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
services/marketdata-service/alembic/: env.py
services/marketdata-service/alembic/versions/: 001_initial_schema.py
services/marketdata-service/app/: main.py
services/marketdata-service/app/api/: corporate_actions.py  instruments.py  market_health.py  prices.py  websocket.py
services/marketdata-service/app/core/: auth.py  cache.py  config.py  dependencies.py
services/marketdata-service/app/core/adapters/: __init__.py  base.py  in_memory.py  tiingo.py  yahoo_finance.py
services/marketdata-service/app/models/: __init__.py  instrument.py
services/marketdata-service/app/schemas/: __init__.py  market_data.py
services/marketdata-service/scripts/: flush_redis.py  flush_redis.sh  seed_instruments.py
services/marketdata-service/tests/: __init__.py  conftest.py  test_adapter.py  test_instruments.py  test_prices.py
services/notification-service/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
services/order-orchestrator/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
services/order-orchestrator/alembic/: env.py
services/order-orchestrator/alembic/versions/: 001_initial_schema.py
services/order-orchestrator/app/: __init__.py  main.py
services/order-orchestrator/app/api/: orders.py  reconcile.py
services/order-orchestrator/app/core/: config.py  events.py  idempotency.py  order_lifecycle.py
services/order-orchestrator/app/core/connectors/: __init__.py  alpaca.py  base.py  factory.py  zerodha.py
services/order-orchestrator/app/core/validation/: __init__.py  order_validator.py
services/order-orchestrator/app/models/: __init__.py  order.py
services/order-orchestrator/app/schemas/: __init__.py  order.py
services/order-orchestrator/tests/: __init__.py  conftest.py  test_orders.py  test_reconcile.py
services/recommendations-service/: Dockerfile  pyproject.toml
services/recommendations-service/app/: main.py
services/recommendations-service/app/api/: dashboard_notifications.py  news.py  recommendations.py
services/recommendations-service/app/core/: cache.py  config.py  database.py
services/recommendations-service/app/models/: __init__.py  recommendation.py
services/recommendations-service/app/schemas/: __init__.py  recommendation.py
services/recommendations-service/scripts/: seed.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: __init__.py  main.py
web/: .dockerignore  .gitignore  ACCEPTANCE_CRITERIA.md  CHANGELOG.md  DEPLOY.md  Dockerfile  Dockerfile.dev  QUICK_DEPLOY.md  README.dev.md  README.prod.md  deploy.sh  docker-compose.frontend.yml  jest.config.js  jest.setup.js  next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
web/.storybook/: main.ts  preview.tsx
web/e2e/: auth.spec.ts  dashboard.spec.ts
web/src/app/: layout.tsx  page.tsx  (+2 more)
(+147 files in other folders)
