[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Background workers for Celery/Temporal tasks"
authors = ["Your Team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}.0"}
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0"
sqlalchemy = "^2.0"
asyncpg = "^0.27"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

